Se definió una clase para el texto del footer

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </main>
 
     <footer>
-        <p>Seguinos en nuestras redes: </p>
+        <p class="txt-redes">Seguinos en nuestras redes: </p>
         <div class="redes">
             <a href="https://www.instagram.com/">
                 <i class="fa-brands fa-instagram fa-3x"></i>
