--- a/nosotros.html
+++ b/nosotros.html
@@ -59,7 +59,7 @@
                 inalámbrica y una interfaz de usuario accesible para que los datos estén disponibles en cualquier dispositivo y a cualquier hora. La estación consta de 
                 dos módulos funcionales: un transmisor y un receptor.
             </p>
-            <ul class="modulos">
+            <ul>
                 <li>
                     <strong>Módulo transmisor:</strong> 
                         Se encarga de adquirir datos de los sensores meteorológicos, procesarlos y transmitirlos vía LoRa, el cual es un protocolo de comunicación inalámbrica
@@ -77,7 +77,7 @@
     </main>
 
     <footer>
-        <p>Seguinos en nuestras redes: </p>
+        <p class="txt-redes">Seguinos en nuestras redes: </p>
         <div class="redes">
             <a href="https://www.instagram.com/">
                 <i class="fa-brands fa-instagram fa-3x"></i>
