--- a/datos.html
+++ b/datos.html
@@ -122,7 +122,7 @@
         </section>
     </main>
     <footer>
-        <p>Seguinos en nuestras redes: </p>
+        <p class="txt-redes">Seguinos en nuestras redes: </p>
         <div class="redes">
             <a href="https://www.instagram.com/">
                 <i class="fa-brands fa-instagram fa-3x"></i>
