Se agregó el script y se implementó la función de WebSockets para recibir datos de Node-RED

--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
             <div class="var-container">
                 <div class="var-met">
                     <h3 class="tit-var-met">Temperatura</h3>
-                    <h2 class="val-var-met">21.5°C</h2>
+                    <h2 class="val-var-met" id="temp">21.5°C</h2>
                 </div>
                 <div class="var-met">
                     <h3 class="tit-var-met">Humedad relativa</h3>
-                    <h2 class="val-var-met">75%</h2>
+                    <h2 class="val-var-met" id="hum">75%</h2>
                 </div>
                 <div class="var-met">
                     <h3 class="tit-var-met">Presión atmosférica</h3>
-                    <h2 class="val-var-met">1010.4 hPa</h2>
+                    <h2 class="val-var-met" id="pres">1010.4 hPa</h2>
                 </div>
                 <div class="var-met">
                     <h3 class="tit-var-met">Dirección del viento</h3>
-                    <h2 class="val-var-met">NE</h2>
+                    <h2 class="val-var-met" id="dirv">NE</h2>
                 </div>
                 <div class="var-met">
                     <h3 class="tit-var-met">Velocidad del viento</h3>
-                    <h2 class="val-var-met">15.4 km/h</h3>
+                    <h2 class="val-var-met" id="velv">15.4 km/h</h3>
                 </div>
                 <div class="var-met">
                     <h3 class="tit-var-met">Precipitación acumulada</h3>
-                    <h2 class="val-var-met">0.0 mm</h2>
+                    <h2 class="val-var-met" id="precip">0.0 mm</h2>
                 </div>
             </div>
         </section>
@@ -107,5 +107,7 @@
             Copyright 2025. Todos los derechos reservados.
         </p>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
