Se modificaron los enlaces a las páginas secundarias.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <a class="link" href="index.html">Inicio</a>
                 </li>
                 <li>
-                    <a class="link" href="datos.html">Datos</a>
+                    <a class="link" href="pages/datos.html">Datos</a>
                 </li>
                 <li>
-                    <a class="link" href="nosotros.html">Quiénes somos</a>
+                    <a class="link" href="pages/nosotros.html">Quiénes somos</a>
                 </li>
                 <li>
-                    <a class="link" href="contacto.html">Contacto</a>
+                    <a class="link" href="pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -43,7 +43,8 @@
 
         <section class="datos-actuales">
             <h1>Datos actuales</h1>
-            <small>Última actualización: 15/10/2025 21:51</small>
+            <small>Última actualización:</small>
+            <small id="ultima-act">15/10/2025 21:51</small>
             <div class="var-container">
                 <div class="var-met">
                     <h3 class="tit-var-met">Temperatura</h3>
