Se agregó un enlace para iniciar sesión.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
                     <a class="link" href="index.html">Inicio</a>
                 </li>
                 <li>
-                    <a class="link" href="pages/datos.html">Datos</a>
+                    <a class="link" id="datos-link" href="#">Datos</a>
                 </li>
                 <li>
                     <a class="link" href="pages/nosotros.html">Quiénes somos</a>
                 </li>
                 <li>
                     <a class="link" href="pages/contacto.html">Contacto</a>
+                </li>
+                <li id="login-item">
+                    <a class="link" id="login-link" href="pages/login.html">Iniciar sesión</a>
                 </li>
             </ul>
         </nav>
