Se agregó el enlace para iniciar sesión en la barra superior

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,13 +20,16 @@
                     <a class="link" href="../index.html">Inicio</a>
                 </li>
                 <li>
-                    <a class="link" href="datos.html">Datos</a>
+                    <a class="link" id="datos-link" href="#">Datos</a>
                 </li>
                 <li>
                     <a class="link" href="nosotros.html">Quiénes somos</a>
                 </li>
                 <li>
                     <a class="link" href="contacto.html">Contacto</a>
+                </li>
+                <li id="login-item">
+                    <a class="link" id="login-link" href="login.html">Iniciar sesión</a>
                 </li>
             </ul>
         </nav>
@@ -100,5 +103,6 @@
             Copyright 2025. Todos los derechos reservados.
         </p>
     </footer>
+    <script src="../js/script.js"></script>
 </body>
 </html>
