--- a/pages/datos.html
+++ b/pages/datos.html
@@ -28,6 +28,9 @@
                 <li>
                     <a class="link" href="contacto.html">Contacto</a>
                 </li>
+                <li>
+                    <i class="fa-solid fa-user"></i>
+                </li>
             </ul>
         </nav>
     </header>
@@ -38,7 +41,7 @@
             <p class="text-datos">En la siguiente tabla se muestran los datos de la estación meteorológica de la última hora, tomados cada 10 minutos.</p>
             <!-- Tabla para mostrar los últimos datos (la metemos dentro de un div) -->
             <div class="tabla-container">
-                <table class="tabla-datos">
+                <table class="tabla-datos" id="tabla-datos">
                     <!-- Encabezado de la tabla -->
                     <thead>
                         <tr>
@@ -52,70 +55,7 @@
                         </tr>
                     </thead>
                     <!-- Datos de la tabla -->
-                    <tbody>
-                        <tr>
-                            <td>16/10/2025 12:20</td>
-                            <td>26.2°C</td>
-                            <td>46%</td>
-                            <td>1011.85 hPa</td>
-                            <td>4.9 km/h</td>
-                            <td>E</td>
-                            <td>0.0 mm</td>
-                        </tr>
-                        <tr>
-                            <td>16/10/2025 12:10</td>
-                            <td>26.5°C</td>
-                            <td>47%</td>
-                            <td>1011.51 hPa</td>
-                            <td>6.3 km/h</td>
-                            <td>E</td>
-                            <td>0.0 mm</td>
-                        </tr>
-                        <tr>
-                            <td>16/10/2025 12:00</td>
-                            <td>26.6°C</td>
-                            <td>47%</td>
-                            <td>1011.85 hPa</td>
-                            <td>5.4 km/h</td>
-                            <td>ENE</td>
-                            <td>0.0 mm</td>
-                        </tr>
-                        <tr>
-                            <td>16/10/2025 11:50</td>
-                            <td>26.4°C</td>
-                            <td>47%</td>
-                            <td>1012.19 hPa</td>
-                            <td>3.2 km/h</td>
-                            <td>E</td>
-                            <td>0.0 mm</td>
-                        </tr>
-                        <tr>
-                            <td>16/10/2025 11:40</td>
-                            <td>26.6°C</td>
-                            <td>47%</td>
-                            <td>1012.19 hPa</td>
-                            <td>5.5 km/h</td>
-                            <td>E</td>
-                            <td>0.0 mm</td>
-                        </tr>
-                        <tr>
-                            <td>16/10/2025 11:30</td>
-                            <td>26.3°C</td>
-                            <td>51%</td>
-                            <td>1012.19 hPa</td>
-                            <td>3.0 km/h</td>
-                            <td>ESE</td>
-                            <td>0.0 mm</td>
-                        </tr>
-                        <tr>
-                            <td>16/10/2025 11:20</td>
-                            <td>25.8°C</td>
-                            <td>48%</td>
-                            <td>1012.19 hPa</td>
-                            <td>3.1 km/h</td>
-                            <td>E</td>
-                            <td>0.0 mm</td>
-                        </tr>
+                    <tbody id="reg-tabla">
                     </tbody>
                 </table>                
             </div>
@@ -145,5 +85,7 @@
             Copyright 2025. Todos los derechos reservados.
         </p>
     </footer>
+
+    <script src="../js/datos.js"></script>
 </body>
 </html>
